# xero-accounting-client

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  progenitor_client.rs
