[package]
name = "xero-accounting-client"
version = "6.3.0"
edition = "2021"
license = "MIT"

[dependencies]
bytes = "1.0"
chrono = { version = "0.4", default-features=false, features = ["serde"] }
futures-core = "0.3"
percent-encoding = "2.3"
reqwest = { version = "0.12", default-features=false, features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
uuid = { version = "1.0", features = ["serde", "v4"] }

